[package]
name = "bars"
version = "0.1.0"
authors = ["Amanda P. Graven <amanda@amandag.net>"]
edition = "2018"

[dependencies]
alsa = "0"
libnotify = "1.0"
unixbar = { git = "https://github.com/agraven/unixbar" }
pulsectl = { version = "0.2", package = "rust-pulsectl-fork" }
systemstat = "0"
anyhow = "1.0"

[profile.release]
lto = true
